@@ -9,6 +9,8 @@
     just for people using the Administrator account in XP)
   * Resolution dialog will show any valid world directory inside the
     "saves" dir, instead of just those of the form WorldN
+  * Updated redstone rendering for Minecraft Beta 1.3 (redstone still
+    doesn't actually "link up" though)
 
 Minecraft X-Ray 2.7 Maintenance Branch 8 (2011.01.26)
 
